Creacion de los formularios

--- a/Sis457Licoreria/ClnLicoreria/ClnLicoreria.csproj
+++ b/Sis457Licoreria/ClnLicoreria/ClnLicoreria.csproj
@@ -50,8 +50,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ClienteCln.cs" />
+    <Compile Include="EmpleadoCln.cs" />
     <Compile Include="ProductoCln.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UsuarioCln.cs" />
+    <Compile Include="VentaCln.cs" />
+    <Compile Include="VentaDetalleCln.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CadLicoreria\CadLicoreria.csproj">
