--- a/Sis457Licoreria/CpLicoreria/CpLicoreria.csproj
+++ b/Sis457Licoreria/CpLicoreria/CpLicoreria.csproj
@@ -166,6 +166,9 @@
   <ItemGroup>
     <None Include="Resources\maxi.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\clientes.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
